@@ -37,12 +37,12 @@ import java.util.Map;
 import javax.vecmath.Point3d;
 
 import org.openscience.cdk.CDKConstants;
-import org.openscience.cdk.annotations.TestMethod;
 import org.openscience.cdk.config.AtomTypeFactory;
 import org.openscience.cdk.exception.CDKException;
 import org.openscience.cdk.exception.NoSuchAtomTypeException;
 import org.openscience.cdk.graph.rebond.RebondTool;
 import org.openscience.cdk.interfaces.IAtom;
+import org.openscience.cdk.interfaces.IAtomContainer;
 import org.openscience.cdk.interfaces.IAtomType;
 import org.openscience.cdk.interfaces.IBioPolymer;
 import org.openscience.cdk.interfaces.IBond;
@@ -50,10 +50,9 @@ import org.openscience.cdk.interfaces.IChemFile;
 import org.openscience.cdk.interfaces.IChemModel;
 import org.openscience.cdk.interfaces.IChemObject;
 import org.openscience.cdk.interfaces.IChemSequence;
-import org.openscience.cdk.interfaces.IMolecule;
-import org.openscience.cdk.interfaces.IMoleculeSet;
 import org.openscience.cdk.interfaces.IMonomer;
 import org.openscience.cdk.interfaces.IStrand;
+import org.openscience.cdk.interfaces.IAtomContainerSet;
 import org.openscience.cdk.io.DefaultChemObjectReader;
 import org.openscience.cdk.io.formats.IResourceFormat;
 import org.openscience.cdk.io.formats.PDBFormat;
@@ -211,13 +210,13 @@ public class PaDELPDBReader extends DefaultChemObjectReader {
 		// initialize all containers
 		IChemSequence oSeq = oFile.getBuilder().newInstance(IChemSequence.class);
 		IChemModel oModel = oFile.getBuilder().newInstance(IChemModel.class);
-		IMoleculeSet oSet = oFile.getBuilder().newInstance(IMoleculeSet.class);
+		IAtomContainerSet oSet = oFile.getBuilder().newInstance(IAtomContainerSet.class);
 
 		// some variables needed
 		String cCol;
 		PDBAtom oAtom;
 		PDBPolymer oBP = new PDBPolymer();
-		IMolecule molecularStructure = oFile.getBuilder().newInstance(IMolecule.class);
+		IAtomContainer molecularStructure = oFile.getBuilder().newInstance(IAtomContainer.class);
 		StringBuffer cResidue;
 		String oObj;
 		IMonomer oMonomer;
@@ -300,7 +299,7 @@ public class PaDELPDBReader extends DefaultChemObjectReader {
 
 							// add the atom
 							oBP.addAtom(oAtom, oMonomer, oStrand);
-							if (readConnect.isSet() && atomNumberMap.put(new Integer(oAtom.getSerial()), oAtom) != null) {
+							if (readConnect.isSet() && atomNumberMap.put(Integer.valueOf(oAtom.getSerial()), oAtom) != null) {
 								logger.warn("Duplicate serial ID found for atom: ", oAtom);
 							}
                                                         molecularStructure.addAtom(oAtom); // PaDEL
@@ -316,7 +315,7 @@ public class PaDELPDBReader extends DefaultChemObjectReader {
 						oAtom = readAtom(cRead, lineLength);
 						oAtom.setHetAtom(true);
 						oBP.addAtom(oAtom);
-						if (atomNumberMap.put(new Integer(oAtom.getSerial()), oAtom) != null) {
+						if (atomNumberMap.put(Integer.valueOf(oAtom.getSerial()), oAtom) != null) {
 							logger.warn("Duplicate serial ID found for atom: ", oAtom);
 						}
 						logger.debug("Added HETATM: ", oAtom);
@@ -339,7 +338,7 @@ public class PaDELPDBReader extends DefaultChemObjectReader {
                                                     logger.info("Bonds could not be created when PDB file was read.");
                                                     logger.debug(exception);
                                                 }
-                                                oSet.addMolecule(molecularStructure); // PaDEL
+                                                oSet.addAtomContainer(molecularStructure); // PaDEL
 					} else if ("END   ".equalsIgnoreCase(cCol)) {
 						atomNumberMap.clear();
 						if (isProteinStructure) {
@@ -356,7 +355,7 @@ public class PaDELPDBReader extends DefaultChemObjectReader {
 									logger.debug(exception);
 								}
 							}
-							oSet.addMolecule(oBP);
+							oSet.addAtomContainer(oBP);
                                                         
 						}
 
@@ -371,7 +370,7 @@ public class PaDELPDBReader extends DefaultChemObjectReader {
                                                     logger.info("Bonds could not be created when PDB file was read.");
                                                     logger.debug(exception);
                                                 }
-                                                oSet.addMolecule(molecularStructure); // PaDEL
+                                                oSet.addAtomContainer(molecularStructure); // PaDEL
 					} else if (cCol.equals("MODEL ")) {
 						// OK, start a new model and save the current one first *if* it contains atoms
 						if (isProteinStructure) {
@@ -383,7 +382,7 @@ public class PaDELPDBReader extends DefaultChemObjectReader {
 								// setup a new one
 								oBP = new PDBPolymer();
 								oModel = oFile.getBuilder().newInstance(IChemModel.class);
-								oSet = oFile.getBuilder().newInstance(IMoleculeSet.class);
+									oSet = oFile.getBuilder().newInstance(IAtomContainerSet.class);
 							}
 						} else {
 							if (molecularStructure.getAtomCount() > 0) {
@@ -392,9 +391,9 @@ public class PaDELPDBReader extends DefaultChemObjectReader {
 								oModel.setMoleculeSet(oSet);
 								oSeq.addChemModel(oModel);
 								// setup a new one
-								molecularStructure = oFile.getBuilder().newInstance(IMolecule.class);
+								molecularStructure = oFile.getBuilder().newInstance(IAtomContainer.class);
 								oModel = oFile.getBuilder().newInstance(IChemModel.class);
-								oSet = oFile.getBuilder().newInstance(IMoleculeSet.class);
+								oSet = oFile.getBuilder().newInstance(IAtomContainerSet.class);
 							}
 						}
 					} else if ("REMARK".equalsIgnoreCase(cCol)) {
@@ -537,9 +536,9 @@ public class PaDELPDBReader extends DefaultChemObjectReader {
 	}
 
 	private void addBond(PDBPolymer obp, int bondAtomNo, int bondedAtomNo) {
-		IAtom firstAtom = (PDBAtom)atomNumberMap.get(new Integer(bondAtomNo));
-		IAtom secondAtom = (PDBAtom)atomNumberMap.get(new Integer(bondedAtomNo));
-		if (firstAtom == null) {
+		IAtom firstAtom = (PDBAtom)atomNumberMap.get(Integer.valueOf(bondAtomNo));
+		IAtom secondAtom = (PDBAtom)atomNumberMap.get(Integer.valueOf(bondedAtomNo));
+				if (firstAtom == null) {
 			logger.error("Could not find bond start atom in map with serial id: ", bondAtomNo);
 		}
 		if (secondAtom == null) {
@@ -592,7 +591,7 @@ public class PaDELPDBReader extends DefaultChemObjectReader {
 	}
 
         // PaDEL
-        private boolean createBondsWithRebondTool(IMolecule mol){
+        private boolean createBondsWithRebondTool(IAtomContainer mol){
 		RebondTool tool = new RebondTool(2.0, 0.5, 0.5);
 		try {
 //			 configure atoms
@@ -714,18 +713,15 @@ public class PaDELPDBReader extends DefaultChemObjectReader {
 		return oAtom;
 	}
 
-	@TestMethod("testClose")
   public void close() throws IOException {
 		_oInput.close();
 	}
 
     private void initIOSettings() {
-    	useRebondTool = new BooleanIOSetting("UseRebondTool", IOSetting.LOW,
-          "Should the PDBReader deduce bonding patterns?",
-          "false");
-        readConnect = new BooleanIOSetting("ReadConnectSection", IOSetting.LOW,
-          "Should the CONECT be read?",
-          "true");
+		useRebondTool = new BooleanIOSetting("UseRebondTool", IOSetting.Importance.LOW,
+		"Should the PDBReader deduce bonding patterns?", "false");
+        readConnect = new BooleanIOSetting("ReadConnectSection", IOSetting.Importance.LOW,
+    "Should the CONECT be read?", "true");
     }
 
     public void customizeJob() {
